--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "starwars",
-  "version": "1.0.0",
-  "description": "Helps you find the characters you are looking for",
+  "name": "hotrestaurant",
+  "version": "1.0.1",
+  "description": "",
   "main": "server.js",
-  "dependencies": {
-    "express": "^4.16.3"
-  },
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "watch": "nodemon server.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {},
+  "devDependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.6"
   }
 }
